# screenshot

./: .travis.yml  CMakeLists.txt  INSTALL  README.md  io.elementary.screenshot-tool.yml  io.elementary.screenshot.json  io.elementary.screenshot.yml  meson.build  snapcraft.yaml
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/io.elementary.screenshot/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/io.elementary.screenshot.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/io.elementary.screenshot.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-io.elementary.screenshot.yml/: build-screenshot  cleanup  finish  init
.flatpak-builder/cache/summaries/: 37427b68cdc00cd91feec62be98673697f28c8efac33dd59c2f3fe1844e50128-2c503d0a1769f13dbcdb46c4e48aff11a2d700735afed98682527372bb423d93.delta  a44e1fed30d71dcd9a72f4cf8b4699eaef0c2aad7e4fe82a087d1e3b39cc44bf-2c503d0a1769f13dbcdb46c4e48aff11a2d700735afed98682527372bb423d93.delta
.flatpak-builder/checksums/: x86_64-io.elementary.screenshot.yml
.github/workflows/: ci.yml  main.yml  merge.yml  release.yml
data/: CMakeLists.txt  gresource.xml  gschema.xml  io.elementary.screenshot-tool.appdata.xml.in  io.elementary.screenshot-tool.desktop.in  io.elementary.screenshot-tool.gschema.xml  io.elementary.screenshot.appdata.xml.in  io.elementary.screenshot.desktop.in  io.elementary.screenshot.gschema.xml  meson.build  screenshot-tool.appdata.xml.in  screenshot-tool.desktop.in  screenshot.appdata.xml  screenshot.appdata.xml.in  screenshot.desktop  screenshot.desktop.in  screenshot.metainfo.xml.in
data/font/: OFL.txt
debian/: changelog  control  copyright  io.elementary.screenshot.install  postinst  prerm  rules
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  ae.po  ar.po  ba.po  bg.po  bi.po  bm.po  bo.po  br.po  bs.po  ca.po  ce.po  ckb.po  cs.po  cu.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  ho.po  (+73 more)
po/extra/: LINGUAS  POTFILES  ab.po  ae.po  am.po  an.po  ar.po  av.po  ay.po  az.po  bg.po  bh.po  bi.po  bn.po  bs.po  ca.po  ce.po  ckb.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dz.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  extra.pot  fa.po  ff.po  fi.po  fo.po  fr.po  (+96 more)
schemas/: CMakeLists.txt  net.launchpad.screenshot.gschema.xml
src/: Application.vala  CaptureType.vala  SaveDialog.vala  Screenshot.vala  ScreenshotBackend.vala  ScreenshotProxy.vala  ScreenshotWindow.vala  SelectionArea.vala  Translations.vala  Utils.vala
src/Widgets/: DelaysList.vala  SaveDialog.vala  SelectionArea.vala  TimersList.vala  ValidationMessage.vala
